--- a/composer.json
+++ b/composer.json
@@ -1,11 +1,11 @@
 {
     "name": "khalyomede/pulsar-php",
-    "description": "Let you get JSON result from an API in a breeze (without using curl)",
+    "description": "API request and response, without using CURL.",
     "type": "library",
     "license": "MIT",
     "minimum-stability": "stable",
     "require": {
-    	"php" : ">=5.3.0"
+    	"php" : ">=7.2.0"
     },
     "autoload" : {
     	"psr-4" : {
