operated a complete rework for the upcoming version 2

--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,9 @@
     "autoload" : {
     	"psr-4" : {
     		"Khalyomede\\" : "src/"
-    	}
+        },
+        "files": [
+            "src/function/pulsar.php"
+        ]
     }
 }
