removed composer.lock from the distant repository

--- a/composer.json
+++ b/composer.json
@@ -14,5 +14,8 @@
         "files": [
             "src/function/pulsar.php"
         ]
+    },
+    "require-dev": {
+        "khalyomede/matcha": "0.*"
     }
 }
